Setup of Eleventy and Netlify complete

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ title: Penzion u vody
 			<div class="testimonial">
 				<div class="testimonial__bubble">
 					<p class="testimonial__score">95 %</p>
-					<p>Naprosto parádní místo s krásným výhledem na jezero a hory. Přátelský a&nbsp;ochotný personál nám zajistil nádhernou dovolenou.</p>
+					<p>Naprosto parádní místo s krásným výhledem na jezero a hory. Přátelský a&nbsp;ochotný personál nám zajistil nádhernou dovolenou. Netlify.</p>
 				</div>
 				<div class="testimonial__name">
 					Jan a Alena Novákovi (srpen 2020)
